# versiontracker

./: .bandit  .branch-config  .coveragerc  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  BADGE_FIXES.md  BRANCH_PROTECTION_SUMMARY.md  CHANGELOG.md  CICD_FIX_EXECUTIVE_SUMMARY.md  CI_CD_IMPROVEMENTS.md  CI_CD_PIPELINE_FIX_COMPLETE.md  CI_CD_PIPELINE_UPGRADE_2024.md  CI_CD_STATUS.md  CI_CD_STATUS_REPORT.md  CI_FIX_STATUS.md  CI_PRECOMMIT_COMPATIBILITY.md  CLAUDE.md  CLAUDE_HOOKS_SETUP.md  CODE_REVIEW_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_RECOMMENDATIONS.md  FINAL_BADGE_STATUS.md  FINAL_IMPLEMENTATION_GUIDE.md  HOMEBREW_RELEASE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INFRASTRUCTURE_UPDATES.md  PHASE_1_3_SUMMARY.md  PROJECT_REVIEW.md  PUBLISHING.md  PYPI_NAMING_FIX.md  PYPI_SETUP.md  PYTEST_TIMEOUT_FIX.md  README.md  RELEASE.md  (+50 more)
.claude/: README.md  hooks.json
.github/: CI_CD_GUIDE.md  CODEOWNERS  dependabot.yml  verify_badges.py
.github/actions/setup-python-deps/: README.md  action.yml
.github/workflows/: advanced-ci.yml  advanced-ci.yml.disabled  branch-protection.yml  ci-fixed.yml  ci-simple.yml  ci.yml  codeql-analysis.yml  coverage.yml  dependabot-auto-merge.yml  lint.yml  performance.yml  publish-pypi.yml  pylint.yml  release-homebrew.yml  release.yml  security-audit.yml  security.yml  test.yml  trigger-ci.md
benchmarks/: __init__.py  core_benchmarks.py
docs/: ARCHITECTURE.md  AUTO_UPDATES_FEATURE.md  AUTO_UPDATE_MANAGEMENT.md  PYTHON313_SUPPORT.md  TESTING.md  TESTING_STRATEGY.md  USAGE.md  api.md  future_roadmap.md  test_coverage_strategy.md
examples/: check_auto_updates.py  identity_legacy.py  identity_py312.py  python313_type_hints.py
gui/: VersionTrackerApp.swift
scripts/: compare_performance.py  performance_test.py  test_python313.py  update_dependencies.py
tests/: TEST_COVERAGE_SUMMARY.md  __init__.py  integration_test_plan.md  mock_adaptive_rate_limiter.py  mock_aiohttp_session.py  mock_homebrew_server.py  test_additional_functions.py  test_advanced_cache.py  test_ai_module.py  test_app_store.py  test_apps.py  test_apps_coverage.py  test_apps_coverage_converted.py  test_apps_extra.py  test_apps_new.py  test_apps_new_pytest.py  test_async_homebrew.py  test_async_homebrew_coverage.py  test_async_integration.py  test_async_network.py  test_async_parity.py  test_auto_update_advanced.py  test_auto_update_edge_cases.py  test_auto_update_handlers.py  test_auto_update_integration.py  test_auto_update_integration_flows.py  test_auto_update_rollback.py  test_auto_updates.py  test_brew_candidates.py  test_brew_installability.py  test_cache.py  test_cli.py  test_cli_auto_updates.py  test_comparator_coverage.py  test_config.py  test_config_coverage.py  test_config_gaps.py  test_config_loader.py  test_config_save.py  test_config_validation_coverage.py  (+44 more)
tests/handlers/: __init__.py  test_app_handlers.py  test_backup_handlers.py  test_brew_handlers_coverage.py  test_config_handlers.py  test_error_handlers_coverage.py  test_export_handlers.py  test_filter_handlers.py  test_macos_handlers.py  test_setup_handlers.py  test_utils_handlers.py
tests/integration/: test_cli_workflows.py
tmp_test/: custom_config.yaml  new_config.yaml  test_config.yaml
tools/: docstring_analyzer.py  validate_ci_precommit.py
versiontracker/: __init__.py  __main__.py  advanced_cache.py  analytics.py  app_finder.py  apps.py  async_homebrew.py  async_homebrew_prototype.py  async_network.py  benchmarks.py  cache.py  cli.py  config.py  deprecation.py  enhanced_matching.py  error_codes.py  exceptions.py  export.py  homebrew.py  macos_integration.py  menubar_app.py  profiling.py  ui.py  utils.py  version.py  version_legacy.py
versiontracker/ai/: __init__.py
versiontracker/apps/: __init__.py  cache.py  finder.py  matcher.py
versiontracker/commands/: __init__.py  list_apps.py  recommendations.py
versiontracker/experimental/: __init__.py  analytics.py  benchmarks.py
versiontracker/handlers/: README.md  __init__.py  app_handlers.py  auto_update_handlers.py  auto_update_types.py  backup_handlers.py  brew_handlers.py  config_handlers.py  enhanced_auto_update_handlers.py  error_handlers.py  export_handlers.py  filter_handlers.py  macos_handlers.py  outdated_handlers.py  setup_handlers.py  ui_handlers.py  utils_handlers.py
versiontracker/ml/: __init__.py
versiontracker/plugins/: __init__.py  example_plugins.py
versiontracker/version/: __init__.py  batch.py  comparator.py  fuzzy.py  homebrew.py  models.py  parser.py  utils.py
